<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- not for translation -->
    <string name="label" translatable="false">@string/app_name</string>
    <string name="fragments_list_list" translatable="false">pl.selvin.android.listsyncsample.ui.ListsListFragment</string>
    <string name="move_upward_behavior" translatable="false">pl.selvin.android.listsyncsample.app.MoveUpwardBehavior</string>


    <string name="listslist_activity_title">Lists</string>
    <string name="login_activity_title">Sign-in</string>
    <string name="label_status">Status</string>
    <string name="prompt_status">Select status</string>
    <string name="label_priority">Priority</string>
    <string name="prompt_priority">Select priority</string>
    <string name="label_start_date">Start date</string>
    <string name="label_end_date">End date</string>
    <string name="label_name">Name</string>
    <string name="label_description">Description</string>

    <string name="deletion_cancelled">Deletion cancelled</string>
    <string name="deleted">Deleted</string>
    <string name="lists_list_empty">There are no lists…</string>
    <string name="list_deletion_title">Delete list</string>
    <string name="list_deletion_message">Do you really want to delete list?</string>
    <string name="items_list_empty">There are no items…</string>
    <string name="item_deletion_title">Delete item</string>
    <string name="item_deletion_message">Do you really want to delete item?</string>
    <string name="menu_refresh_title">Refresh</string>



    <string name="welcome">Welcome!</string>
    <string name="login_error_field_required">This field is required</string>
    <string name="login_login_hint">User name</string>
    <string name="login_password_hint">Password</string>
    <string name="login_error_invalid_password">Wrong password - try: %s</string>
    <string name="lists_search_hint">Find list</string>

    <string name="fake_password" translatable="false">password</string>
    <string name="authenticator_account_exists">List Sync Sample account already exists. Only one account is supported.</string>
    <string name="cannot_create_account">Cannot create account</string>
    <string name="label_tags">Tags:</string>
    <string name="label_items">Items:</string>
    <string name="add_new_tag">Add new tag</string>
    <string name="generic_add">Add</string>
    <string name="generic_error_message">Something gone wrong!</string>

</resources>