<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusableInTouchMode="true">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/name_outer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintAnimationEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/label_name"
                android:imeOptions="actionNext|flagNoExtractUi" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/description_outer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/name_outer"
            app:hintAnimationEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="top"
                android:hint="@string/label_description"
                android:imeOptions="actionNext|flagNoExtractUi"
                android:inputType="textMultiLine"
                android:lines="4"
                android:scrollbars="horizontal|vertical" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/priority_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/description_outer"
            android:text="@string/label_priority" />

        <Spinner
            android:id="@+id/priority"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/priority_label"
            android:prompt="@string/prompt_priority" />

        <TextView
            android:id="@+id/status_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/priority"
            android:text="@string/label_status" />

        <Spinner
            android:id="@+id/status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/status_label"
            android:drawSelectorOnTop="true"
            android:prompt="@string/prompt_status" />

        <TextView
            android:id="@+id/start_date_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/status"
            android:text="@string/label_start_date" />

        <View
            android:id="@+id/divider"
            android:layout_width="1dp"
            android:layout_height="1dp"
            android:layout_below="@id/start_date_label"
            android:layout_centerHorizontal="true" />

        <TextView
            android:id="@+id/start_date"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_below="@id/start_date_label"
            android:layout_toStartOf="@id/divider"
            android:gravity="center"
            android:textSize="17sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/start_time"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_below="@id/start_date_label"
            android:layout_alignParentEnd="true"
            android:layout_toEndOf="@id/divider"
            android:gravity="center"
            android:textSize="17sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/end_date_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/start_date"
            android:text="@string/label_end_date" />

        <TextView
            android:id="@+id/end_date"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_below="@id/end_date_label"
            android:layout_toStartOf="@id/divider"
            android:gravity="center"
            android:textSize="17sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/end_time"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_below="@id/end_date_label"
            android:layout_toEndOf="@id/divider"
            android:gravity="center"
            android:textSize="17sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tags_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/end_time"
            android:text="@string/label_tags" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/tags"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tags_label"
            android:minHeight="200dp" />
    </RelativeLayout>

</androidx.core.widget.NestedScrollView>