<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:focusableInTouchMode="true">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        app:hintAnimationEnabled="false"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/label_name"
            android:imeOptions="actionNext|flagNoExtractUi" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        app:hintAnimationEnabled="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/description"
            android:gravity="top"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/label_description"
            android:imeOptions="actionNext|flagNoExtractUi"
            android:inputType="textMultiLine"
            android:lines="4"
            android:scrollbars="horizontal|vertical" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_items" />

    <FrameLayout
        android:id="@+id/items"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />
</LinearLayout>
